<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="chestworkout"
            type="com.example.pleaseworkout.model.WorkoutData" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/charcoal"
        tools:context=".view.NewActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@id/workoutImage"
                    android:layout_width="320dp"
                    android:layout_height="320dp"
                    android:src="@drawable/ic_launcher_foreground"
                    android:scaleType="fitXY"
                    android:layout_marginBottom="15dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/workoutName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/workout_name"
                    android:gravity="center"
                    android:textStyle="bold|normal"
                    android:textSize="24sp"
                    android:elevation="15dp"
                    android:padding="10dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:background="@color/lightGray"
                    android:textColor="@color/black"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/workoutType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/workout_type"
                    android:layout_marginTop="15dp"
                    android:textSize="22sp"
                    android:gravity="center"
                    android:paddingBottom="20dp"
                    android:layout_gravity="start"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/workoutExplain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/workout_description"
                    android:layout_marginTop="15dp"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:lineSpacingExtra="15dp"
                    android:textColor="@color/white"/>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>